# LearnOpenCV

B04283_03_code/: CMakeLists.txt  sample1.cpp  sample2.cpp  sample5.cpp
B04283_06_code/: main.cpp
B04283_07_code/code/: CMakeLists.txt  EarDectector  OverlaySunglasses  overlayFacemask.cpp
B04283_08_code/code/: CMakeLists.txt  backgroundSubtraction.cpp
B04283_09_code/code/: CMakeLists.txt
B04283_10_code/: CMakeLists.txt  Segment  SegmentOcr  Thumbs.db  ticket.txt
B04283_11_code/: CMakeLists.txt  Detection  Thumbs.db  detection.cpp  ocr.cpp
LearnOpenCV3/: LearnOpenCV3.sln
LearnOpenCV3/TestEnv/: TestEnv.cpp  TestEnv.vcxproj  TestEnv.vcxproj.filters
OpencvPython/: chapter1.py  chapter2.py  chapter3.py  chapter4.py  chapter5.py  chapter6.py  chapter7.py  chapter8.py  chapter9.py  project1.py  project2.py  project3.py  tools.py  trackFace.py
